<resources>
    <string name="app_name">SD</string>

    <!-- For the First Screen -->
    <string name="load_input_hint">Enter Service load in kN</string>
    <string name="bolts_string">Bolted Connection</string>
    <string name="welds_string">Welded Connection</string>
    <string name="enter_service_load">Please Enter Service Load</string>

    <!-- For First page of Bolted Connection -->
    <string name="enter_bolt_grade">Enter the grade of bolt</string>
    <string name="enter_bolt_dia">Enter diameter of bolt in mm</string>
    <string name="empty_bolt_grade">Please enter bolt grade.</string>
    <string name="wrong_bolt_grade">Enter a valid grade.</string>
    <string name="enter_effective_length">Enter Effective length of member in mm</string>
    <string name="empty_effective_length">Please Enter Effective length of tension member</string>
    <string name="empty_bolt_dia">Please give the diameter of the bolt.</string>
    <string name="enter_minimum_plate_thickness">Enter the minimum plate thickness</string>
    <string name="empty_thickness">Please enter minimum plate thickness</string>

    <!-- For Second Page of Bolted Connection -->
    <string name="BoltGrade">Bolt Grade</string>
    <string name="BoltDia">Bolt Diameter</string>
    <string name="BoltValue">Bolt Value</string>
    <string name="NoOfBolt">No of Bolts</string>
    <string name="StrengthBolt">Bolt Strength</string>
    <string name="PitchLength">Pitch Length</string>
    <string name="PitchMessageLess">Pitch Distance can\'t be less than 2.5 times the diameter of bolt </string>
    <string name="PitchMessageMore">Can\'t increase pitch anymore</string>
    <string name="EndDistance">End Distance</string>
    <string name="EndMessageLess">End Distance can\'t be less than 1.5 times the diameter of bolt </string>
    <string name="EndMessageMore">Can\'t increase End distance anymore</string>
    <string name="AreaAn">Area An</string>
    <string name="AreaAg">Area Ag</string>
    <string name="AreaAnc">Area Anc</string>
    <string name="AreaAgo">Area Ago</string>
    <string name="ForTheSection">Select a Section For the Area Ag</string>
    <string name="enter_section_dimensions">Enter the dimensions of section</string>
    <string name="Value_l">l (mm)</string>
    <string name="Value_h">h (mm)</string>
    <string name="Value_t">t (mm)</string>
    <string name="Value_a">a (mm)</string>
    <string name="Value_b">b (mm)</string>
    <string name="Value_c">c (mm)</string>
    <string name="EnterLeastMomentOfInertia">Enter Least M.I in mm4</string>
    <string name="enter_section_length">Enter the length of section</string>
    <string name="enter_section_breadth">Enter the breadth of section</string>
    <string name="enter_section_thickness">Enter the thickness of section</string>
    <string name="enter_section_a">Enter the a value of section for bolted connection</string>
    <string name="enter_section_b">Enter the b of section for bolted connection</string>
    <string name="enter_section_c">Enter the c of section for bolted connection</string>
    <string name="enter_section_MI">Enter the Least area M.I. in mm4 of section</string>

    <!-- For Third Page of Bolted Connection -->
    <string name="Tdn">Tdn</string>
    <string name="Tdg">Tdg</string>
    <string name="Tdb">Tdb</string>
    <string name="Td">Td</string>
    <string name="B">B(Beta)</string>
    <string name="SlendernessRatio">Slenderness Ratio</string>
    <string name="numberOfRows">Number Of Rows</string>
    <string name="Factored_Load">Factored Load</string>
    <string name="FailureTd">Td is smaller than factored load , Review Section</string>
    <string name="FailureB">B(Beta) must be greater than 0.7 and less than 1, Review Section</string>
    <string name="FailureSR">Slenderness Ration must be smaller than 400 , Review Section</string>

    <!-- For Fourth Page -->
    <string name="Final_Message">The Design</string>
    <string name="Section">The selected Section is :</string>

    <!-- Compression member -->
    <string name="tension">Tension</string>
    <string name="compression">Compression</string>
    <string name="compression_select_section">Select Section</string>
    <string name="i_section">I section</string>
    <string name="channel_section">Channel section</string>
    <string name="angle_section">Double Angle section</string>
    <string name="built_section">Built section</string>

    <!-- Page one compression member -->
    <string name="assumed_fcd_value">Assumed FCD Value :</string>
    <string name="select_section_message">Please select a section !</string>
    <string name="required_area">Required Area : </string>
    <string name="select_section_text">Select a section based on above area and provide necessary details</string>
    <string name="area">area (mm2)</string>
    <string name="rvv">rvv (mm)</string>
    <string name="cg_distance">C.G distance (mm)</string>

    <!-- Page two compression member -->
    <string name="enter_section_C_a">Enter a value for section for bolting</string>
    <string name="enter_section_C_b">Enter b value of section for bolting</string>
    <string name="enter_section_C_c">Enter c value of section for bolting</string>
    <string name="enter_section_csa">Enter cross sectional area of Section</string>
    <string name="enter_section_rvv">Enter the minimum radius of gyration of section</string>
    <string name="enter_section_CG">Enter the C.G distance of the section from its axis</string>
    <string name="effective_length">Effective Length (mm)</string>

    <!-- Page three compression member -->
    <string name="enter_first_fcd_value">Enter the first fcd Value</string>
    <string name="enter_second_fcd_value">Enter the second fcd Value</string>
    <string name="enter_fcd_1">Enter the first Fcd value</string>
    <string name="enter_fcd_2">Enter the Second Fcd value</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fcd">First Fcd</string>
    <string name="second_fcd">Second Fcd</string>
    <string name="fcd">Fcd Value</string>
    <string name="section_area">Section Area</string>
    <string name="strength_section">Strength Section</string>
    <string name="rcc_design">RCC design</string>
    <string name="steel_design">Steel Design</string>
    <string name="app_intro_title">Design civil structures fast</string>
    <string name="app_intro_description">Use this app to design structures faster and also use these results to practice and be better</string>
    <string name="available_design">Design availiable</string>
    <string name="design_text">Design Text</string>
    <string name="steel_design_text">Steel Design</string>
    <string name="rcc_design_text">RCC Design</string>

</resources>
