<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/BPageThree_CoordinateLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.sd.BoltActivity">

    <ScrollView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="88dp"
        android:layout_height="match_parent">
            <GridLayout
                android:rowCount="9"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltGrade"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltGrade"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:id="@+id/BPageTwo_TV_BoltGrade"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/NoOfBolt"
                    android:layout_row="1"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/NoOfBolt"
                    android:id="@+id/BPageTwo_TV_NoOfBolts"
                    android:layout_row="1"
                    android:layout_column="1"/>

                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltDia"
                    android:layout_row="2"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltDia"
                    android:layout_row="2"
                    android:id="@+id/BPageTwo_TV_BoltDia"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/PitchLength"
                    android:layout_row="3"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/PitchLength"
                    android:layout_row="3"
                    android:id="@+id/BPageTwo_TV_Pitch"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/EndDistance"
                    android:layout_row="4"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/EndDistance"
                    android:id="@+id/BPageTwo_TV_EndDistance"
                    android:layout_row="4"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltValue"
                    android:layout_row="5"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltValue"
                    android:layout_row="5"
                    android:id="@+id/BPageTwo_TV_BoltValue"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/StrengthBolt"
                    android:layout_row="6"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/StrengthBolt"
                    android:layout_row="6"
                    android:id="@+id/BPageTwo_TV_BoltStrength"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/AreaAn"
                    android:layout_row="7"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/AreaAn"
                    android:layout_row="7"
                    android:id="@+id/BPageTwo_TV_AreaAnc"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/AreaAg"
                    android:layout_row="8"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/AreaAg"
                    android:id="@+id/BPageTwo_TV_AreaAgo"
                    android:layout_row="8"
                    android:layout_column="1"/>

            </GridLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BPageThree_FABNext"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_chevron_right_white_24dp"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BPageThree_FABPrevious"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_chevron_left_white_24dp"
        android:layout_margin="16dp"
        android:layout_gravity="bottom"/>

</android.support.design.widget.CoordinatorLayout>
