<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/BPageFour_CoordinateLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.sd.ui.steel.connection.bolt.BoltActivity">

    <ScrollView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="88dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <GridLayout
                android:rowCount="6"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/Factored_Load"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/Factored_Load"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:id="@+id/BPageFour_TV_FactoredLoad"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltGrade"
                    android:layout_row="1"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/BoltGrade"
                    android:id="@+id/BPageFour_TV_boltGrade"
                    android:layout_row="1"
                    android:layout_column="1"/>

                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/NoOfBolt"
                    android:layout_row="2"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/NoOfBolt"
                    android:layout_row="2"
                    android:id="@+id/BPageFour_TV_NoOfBolt"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/numberOfRows"
                    android:layout_row="3"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/numberOfRows"
                    android:layout_row="3"
                    android:id="@+id/BPageFour_TV_NoOfRows"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/StrengthBolt"
                    android:layout_row="4"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/StrengthBolt"
                    android:id="@+id/BPageFour_TV_BoltStrength"
                    android:layout_row="4"
                    android:layout_column="1"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/Td"
                    android:layout_row="5"
                    android:layout_column="0"/>
                <TextView
                    style="@style/GridLayoutTextView"
                    android:text="@string/Td"
                    android:id="@+id/BPageFour_TV_Td"
                    android:layout_row="5"
                    android:layout_column="1"/>
            </GridLayout>
            <View
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/Section"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/TextViewForSection"
                    android:id="@+id/BPAgeFour_TV_section_l"
                    android:text="@string/Value_l"/>
                <ImageButton
                    android:background="@color/colorPrimary"
                    android:layout_height="26dp"
                    style="@style/TextViewForSection"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_close_black_24dp"/>
                <TextView
                    style="@style/TextViewForSection"
                    android:id="@+id/BPAgeFour_TV_section_h"
                    android:text="@string/Value_h"/>
                <ImageButton
                    android:background="@color/colorPrimary"
                    android:layout_height="26dp"
                    style="@style/TextViewForSection"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_close_black_24dp"/>
                <TextView
                    style="@style/TextViewForSection"
                    android:id="@+id/BPAgeFour_TV_section_t"
                    android:text="@string/Value_t"/>
            </LinearLayout>
            <View
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BPageFour_FABConfirm"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_check_black_24dp"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BPageFour_FABPrevious"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_chevron_left_white_24dp"
        android:layout_margin="16dp"
        android:layout_gravity="bottom"/>

</android.support.design.widget.CoordinatorLayout>
